--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -26,4 +26,5 @@ jobs:
       run: |
         pip install pyinstaller
         pyinstaller --onefile --paths venv/Lib/site-packages main.spec
+#        pyinstaller main.spec
         mv dist/main.exe dist/enhance.exe
