--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -17,14 +17,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.9"
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        pip install pyinstaller
-#        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Update Executable
       run: |
         pip install pyinstaller
         pyinstaller --onefile --paths venv/Lib/site-packages main.spec
-#        pyinstaller main.spec
-        mv dist/main.exe dist/enhance.exe
+        mv dist/main.exe enhance.exe
