updated git config

--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -21,6 +21,9 @@ jobs:
       run: |
         pip install pyinstaller
         pyinstaller --distpath . main.spec
+        git config --global user.name 'Hakob Abajian'
+        git config --global user.email 'hakob.abajian@med.usc.edu'
         git add main.exe --force
-        git commit
+        git commit -m "Updated Executable"
+        git push
 #        mv dist/main enhance.exe
