--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         pip install pyinstaller
         pyinstaller --distpath . main.spec
-        rename main.exe enhance.exe
+#        rename main.exe enhance.exe
         git config --global user.name 'Hakob Abajian'
         git config --global user.email 'hakob.abajian@med.usc.edu'
         git add main.exe --force
