--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -19,6 +19,9 @@ jobs:
         python-version: "3.9"
     - name: Update Executable
       run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install pyinstaller
         pyinstaller --distpath . main.spec
         git config --global user.name 'Hakob Abajian'
