--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -17,11 +17,12 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.9"
+    - name: Install Dependencies
+      uses: py-actions/py-dependency-install@v4
+      with:
+        update-pip: "true"
     - name: Update Executable
       run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install pyinstaller
         pyinstaller --distpath . main.spec
         git config --global user.name 'Hakob Abajian'
