--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -23,8 +23,8 @@ jobs:
         update-pip: "true"
     - name: Update Executable
       run: |
-        pip install GDAL-3.4.2-cp310-cp310-win_amd64.whl
-        pip install rasterio-1.2.10-cp310-cp310-win_amd64.whl
+        pip install GDAL
+        pip install rasterio
         pip install pyinstaller
         pyinstaller --distpath . main.spec
         git config --global user.name 'Hakob Abajian'
