--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         pip install GDAL-3.4.2-cp310-cp310-win_amd64.whl
         pip install rasterio-1.2.10-cp310-cp310-win_amd64.whl
+        dir c:\hostedtoolcache\windows\python\3.10.2\x64\lib\site-packages\rasterio
         pip install pyinstaller
         pyinstaller --distpath . main_gh.spec
         git config --global user.name 'Hakob Abajian'
