--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -7,29 +7,6 @@ on:
   - push
 
 jobs:
-  windows-executable:
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10.2"
-    - name: Install Dependencies
-      uses: py-actions/py-dependency-install@v4
-      with:
-        update-pip: "true"
-    - name: Update Executable
-      run: |
-        pip install GDAL-3.4.2-cp310-cp310-win_amd64.whl
-        pip install rasterio-1.2.10-cp310-cp310-win_amd64.whl
-        pip install pyinstaller
-        pyinstaller --distpath ./executables --specpath ./specs/main_win.spec --name enhance_win
-        git config --global user.name 'Hakob Abajian'
-        git config --global user.email 'hakob.abajian@med.usc.edu'
-        git add main.exe --force
-        git commit -m "Updated Executable"
-        git push
   linux-executable:
     runs-on: ubuntu-latest
     steps:
@@ -44,6 +21,6 @@ jobs:
           update-pip: "true"
       - name: Update Executable
         run: |
-          pip install GDAL-3.4.2-cp310-cp310-win_amd64.whl
-          pip install rasterio-1.2.10-cp310-cp310-win_amd64.whl
+          pip install gdal>=3.4.2
+          pip install rasterio>=1.2.10
           pip install pyinstaller
