--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -21,6 +21,11 @@ jobs:
           update-pip: "true"
       - name: Update Executable
         run: |
-          pip install gdal>=3.4.2
-          pip install rasterio>=1.2.10
+          sudo apt-get install build-essential python-all-dev
+          wget http://download.osgeo.org/gdal/2.0.0/gdal-2.0.0.tar.gz
+          tar xvfz gdal-2.0.0.tar.gz
+          cd gdal-2.0.0
+          ./configure --with-python
+          make
+          sudo make install
           pip install pyinstaller
