--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -21,11 +21,5 @@ jobs:
           update-pip: "true"
       - name: Update Executable
         run: |
-          sudo apt-get install build-essential python-all-dev
-          wget http://download.osgeo.org/gdal/3.6.0/gdal-3.6.0.tar.gz
-          tar xvfz gdal-3.6.0.tar.gz
-          cd gdal-3.6.0
-          ./configure --with-python
-          make
-          sudo make install
+          apt-get install python-gdal
           pip install pyinstaller
