--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -21,7 +21,7 @@ jobs:
           update-pip: "true"
       - name: Check Rasterio Dir
         run: |
-          ls -d /opt/hostedtoolcache/Python/3.10.2/x64/bin/python/rasterio
+          find / -type d -name "rasterio"
       - name: Update Executable
         run: |
           pip install pyinstaller
