added gdal install in linux executable action

--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -52,6 +52,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install gdal-bin
           ogrinfo --version
+          sudo apt-get install libgdal-dev
+          export CPLUS_INCLUDE_PATH=/usr/include/gdal
+          export C_INCLUDE_PATH=/usr/include/gdal
+          pip install GDAL
           pip install pyinstaller
           pyinstaller --distpath . ./specs/main_lin.spec
           git config --global user.name 'Hakob Abajian'
