--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -55,7 +55,7 @@ jobs:
           sudo apt-get install libgdal-dev
           export CPLUS_INCLUDE_PATH=/usr/include/gdal
           export C_INCLUDE_PATH=/usr/include/gdal
-          pip install GDAL
+          pip install GDAL==3.3.2
           pip install pyinstaller
           pyinstaller --distpath . ./specs/main_lin.spec
           git config --global user.name 'Hakob Abajian'
