--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -81,9 +81,14 @@ jobs:
           sudo find . -type d -name "rasterio"
       - name: Update Executable
         run: |
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          brew install gdal
-          pip3 install gdal
+          sudo add-apt-repository ppa:ubuntugis/ppa && sudo apt-get update
+          sudo apt-get update
+          sudo apt-get install gdal-bin
+          ogrinfo --version
+          sudo apt-get install libgdal-dev
+          export CPLUS_INCLUDE_PATH=/usr/include/gdal
+          export C_INCLUDE_PATH=/usr/include/gdal
+          pip install GDAL==3.3.2
           pip install pyinstaller
           pyinstaller --distpath . ./specs/main_mac.spec
           git config --global user.name 'Hakob Abajian'
