--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -83,12 +83,7 @@ jobs:
         run: |
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
           brew install gdal
-          pip download GDAL
-          tar -xpzf GDAL-3.6.0.1.tar.gz
-          cd GDAL-3.6.0.1
-          python setup.py build_ext --gdal-config /usr/local/Cellar/gdal/3.6.0.1/bin/gdal-config
-          python setup.py build
-          python setup.py install
+          pip install GDAL
           pip install pyinstaller
           pyinstaller --distpath . ./specs/main_mac.spec
           git config --global user.name 'Hakob Abajian'
