--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -76,9 +76,9 @@ jobs:
         uses: py-actions/py-dependency-install@v4
         with:
           update-pip: "true"
-      - name: Find Rasterio Directory
+      - name: Check Rasterio Directory
         run: |
-          sudo find . -type d -name "rasterio"
+          ls /Users/runner/hostedtoolcache/Python/3.10.2/x64/rasterio
       - name: Update Executable
         run: |
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
