--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Find/Check Rasterio Directory
         run: |
           sudo find . -type d -name "rasterio"
-          ls /hostedtoolcache/Python/3.10.2/x64/rasterio
+          ls ./hostedtoolcache/Python/3.10.2/x64/rasterio
       - name: Update Executable
         run: |
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
