--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -79,6 +79,7 @@ jobs:
       - name: Find/Check Rasterio Directory
         run: |
           sudo find . -type d -name "rasterio"
+          pwd
           ls ./hostedtoolcache/Python/3.10.2/x64/rasterio
       - name: Update Executable
         run: |
