added date format to config with 3 supported date formats and removed pandas datetime format inference

--- a/config.json
+++ b/config.json
@@ -10,6 +10,9 @@
         "state": "state",
         "zip": "zip"
     },
+    "datetime": {
+        "date_format": "year"
+    },
     "enhancement_variables": {
         "social_vulnerability_index": {
             "enhance": true,
