Modified date format in config.json to be the date format string directly instead of mapping with format key

--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
         "zip": "zip"
     },
     "datetime": {
-        "date_format": "year"
+        "date_format": "%Y/%m/%d"
     },
     "enhancement_variables": {
         "social_vulnerability_index": {
