--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -37,7 +37,7 @@ jobs:
         git commit -m "Updated Executable"
         git push
   linux-executable:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.10
@@ -70,7 +70,7 @@ jobs:
           git commit -m "Updated Executable"
           git push
   macOS-executable:
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.10
