--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -29,12 +29,12 @@ jobs:
         pip install GDAL-3.4.2-cp310-cp310-win_amd64.whl
         pip install rasterio-1.2.10-cp310-cp310-win_amd64.whl
         pip install pyinstaller
-        pyinstaller --distpath . ./specs/main_win.spec
+        pyinstaller --distpath ./executables ./specs/main_win.spec
         git config --global user.name 'Hakob Abajian'
         git config --global user.email 'hakob.abajian@med.usc.edu'
         git pull
-        git add enhance_win.exe --force
-        git commit -m "Updated Executable"
+        git add ./executables/enhance_win.exe --force
+        git commit -m "Updated Windows Executable"
         git push
   linux-executable:
     runs-on: ubuntu-20.04
@@ -62,12 +62,12 @@ jobs:
           export C_INCLUDE_PATH=/usr/include/gdal
           pip install GDAL==3.3.2
           pip install pyinstaller
-          pyinstaller --distpath . ./specs/main_lin.spec
+          pyinstaller --distpath ./executables ./specs/main_lin.spec
           git config --global user.name 'Hakob Abajian'
           git config --global user.email 'hakob.abajian@med.usc.edu'
           git pull
-          git add enhance_lin --force
-          git commit -m "Updated Executable"
+          git add ./executables/enhance_lin --force
+          git commit -m "Updated Linux Executable"
           git push
   macOS-executable:
     runs-on: macos-11
@@ -89,12 +89,13 @@ jobs:
         run: |
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
           brew install gdal
+          gdal-config --version
           pip install GDAL==3.5.3
           pip install pyinstaller
-          pyinstaller --distpath . ./specs/main_mac.spec
+          pyinstaller --distpath ./executables ./specs/main_mac.spec
           git config --global user.name 'Hakob Abajian'
           git config --global user.email 'hakob.abajian@med.usc.edu'
           git pull
-          git add enhance_mac --force
-          git commit -m "Updated Executable"
+          git add ./executables/enhance_mac --force
+          git commit -m "Updated MacOS Executable"
           git push
