--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -88,8 +88,7 @@ jobs:
       - name: Update Executable
         run: |
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          brew install gdal
-          gdal-config --version
+          brew install gdal@3.5.3
           pip install GDAL==3.5.3
           pip install pyinstaller
           pyinstaller --distpath ./executables ./specs/main_mac.spec
