--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -73,10 +73,10 @@ jobs:
     runs-on: macos-11
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.10
+      - name: Set up Python 3.11
         uses: actions/setup-python@v3
         with:
-          python-version: "3.10.2"
+          python-version: "3.11"
       - name: Install Dependencies
         uses: py-actions/py-dependency-install@v4
         with:
@@ -88,7 +88,8 @@ jobs:
       - name: Update Executable
         run: |
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          brew install gdal@3.5.3
+          brew install gdal
+          gdal-config --version
           pip install GDAL==3.5.3
           pip install pyinstaller
           pyinstaller --distpath ./executables ./specs/main_mac.spec
