--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -87,7 +87,7 @@ jobs:
       - name: Update Executable
         run: |
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          brew update
+          rm /usr/local/bin/2to3
           brew install gdal
           gdal-config --version
           pip install GDAL==3.5.3
