--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -88,6 +88,7 @@ jobs:
         run: |
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
           sudo rm /usr/local/bin/2to3-3.11
+          sudo rm /usr/local/bin/2to3
           brew install gdal
           gdal-config --version
           pip install GDAL==3.5.3
