--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -87,9 +87,11 @@ jobs:
       - name: Update Executable
         run: |
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+          ls /usr/local/bin
           sudo rm /usr/local/bin/2to3-3.11
           sudo rm /usr/local/bin/2to3
           sudo rm /usr/local/bin/idle3
+          sudo rm /usr/local/bin/idle3.11
           brew link --overwrite --dry-run python@3.11
           brew install gdal
           gdal-config --version
