--- a/.github/workflows/executable_command.yml
+++ b/.github/workflows/executable_command.yml
@@ -32,10 +32,10 @@ jobs:
         pyinstaller --distpath ./executables ./specs/main_win.spec
         git config --global user.name 'Hakob Abajian'
         git config --global user.email 'hakob.abajian@med.usc.edu'
-        git pull main
+        git pull
         git add ./executables/enhance_win.exe --force
         git commit -m "Updated Windows Executable"
-        git push origin HEAD:main
+        git push
   linux-executable:
     runs-on: ubuntu-20.04
     steps:
@@ -65,10 +65,10 @@ jobs:
           pyinstaller --distpath ./executables ./specs/main_lin.spec
           git config --global user.name 'Hakob Abajian'
           git config --global user.email 'hakob.abajian@med.usc.edu'
-          git pull main
+          git pull
           git add ./executables/enhance_lin --force
           git commit -m "Updated Linux Executable"
-          git push origin HEAD:main
+          git push
   macOS-executable:
     runs-on: macos-11
     steps:
